syntax = "proto3";

option csharp_namespace = "Proto.DTO.StatisticsData";

message StatisticsDataProto {
  string statistics_id = 1;
  string time_slot_id = 2;
  repeated string tag_ids = 3;
  bool is_productive = 4;
  bool is_neutral = 5;
  bool is_unproductive = 6;
}
